<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logologin2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher_foreground"
        android:layout_marginBottom="10dp"
        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:text="@string/app_name"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cust_infocase"
        android:hint="@string/email"
        android:id="@+id/email"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:layout_marginTop="15dp"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cust_infocase"
        android:hint="@string/password"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:maxLines="1"
        android:padding="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/log_in"
        android:id="@+id/login"
        android:textColor="@color/colorBlack"
        android:background="@drawable/cust_compter"/>


    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login">

    </com.google.android.gms.common.SignInButton>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_sccount_sign_up"
        android:id="@+id/txt_signup"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/did_you_forgot_your_password"
        android:id="@+id/txt_forgot"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BlueSquare"
            android:layout_marginTop="40dp"

            />

    </LinearLayout>



</LinearLayout>