<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddVideoPostActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appBar1"

            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/backToHome"
                    android:src="@drawable/ic_arrow_back"/>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_info_outline_black_24dp"
                    android:layout_gravity="end"
                    android:layout_marginRight="20dp"/>


            </androidx.appcompat.widget.Toolbar>




        </com.google.android.material.appbar.AppBarLayout>



        <LinearLayout

            android:id="@+id/linear"
            android:layout_marginTop="60dp"


            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">
            <TextView
                android:layout_gravity="center"
                android:textSize="18dp"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create a new Weave"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pTitleEt"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/cust_infocase"
                android:hint="@string/enter_title"
                android:singleLine="true"/>


                <VideoView
                    android:id="@+id/pImageIv"


                    android:layout_width="wrap_content"
                    android:layout_height="180dp"
                    android:paddingHorizontal="12dp"
                    android:padding="20dp"
                    android:layout_marginHorizontal="12dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_video_camera" />






            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pDescriptionEt"
                android:padding="10dp"
                android:minHeight="120dp"
                android:layout_margin="10dp"
                android:gravity="start"
                android:inputType="textCapSentences|textMultiLine"
                android:background="@drawable/cust_infocase"
                android:hint="@string/enter_description"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/cust_infocase"
                android:text="   Seperate your tags with a point ' . '  "/>

            <com.hootsuite.nachos.NachoTextView
                android:paddingHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:hint="Tag"
                android:gravity="start"
                android:background="@drawable/cust_infocase"

                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:textColor="?attr/tc"
                android:autoLink="email|web|phone"
                android:id="@+id/input_publication_tag"/>


            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/pUploadBtn"
                android:background="@color/ic_launcher_background"

                android:text="@string/upload"
                android:layout_gravity="end"

                android:layout_margin="30dp"
                android:src="@drawable/ic_round_publish_24"
                app:fab_colorNormal="@color/ic_launcher_background"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </RelativeLayout>

</ScrollView>