<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".PostDetailActivity">
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="45dp"

        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/returnBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text=""
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />


    </RelativeLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/ndsv"
        android:layout_below="@id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_above="@+id/commentLayout"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:cardBackgroundColor="@color/colorWhite"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">


                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:id="@+id/uPictureIv"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_person_24" />


                        <LinearLayout
                            android:id="@+id/profileLayout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="18dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView

                                android:id="@+id/uNameTv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Name"
                                android:textColor="@color/colorBlack"
                                android:textSize="15sp" />


                            <TextView
                                android:id="@+id/uTimeTv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="33 min"
                                android:textSize="10sp" />
                        </LinearLayout>

                        <ImageButton
                            android:id="@+id/moreBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:src="@drawable/ic_more" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:background="@color/white"
                        android:orientation="vertical">



                        <TextView
                            android:id="@+id/pTitleTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:autoLink="all"
                            android:text="Title"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp"
                            android:textStyle="bold" />




                        <TextView

                            android:id="@+id/pDescriptionTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/description_of_the_post" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView


                            android:id="@+id/pImageIv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"

                            android:background="@drawable/cust_infocase"
                            android:maxWidth="300dp"
                            app:layout_constraintDimensionRatio="1:1"


                            app:strokeWidth="0.5dp" />


                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorWhite" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="6sp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingHorizontal="1dp">

                        <LinearLayout
                            android:id="@+id/likeAndDislike"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"


                            android:orientation="horizontal">

                            <Button

                                android:id="@+id/likeBtn"
                                android:layout_width="80dp"

                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@null"
                                android:clickable="true"
                                android:drawableStart="@drawable/ic_round_arrow_like"
                                android:focusable="true"
                                android:paddingHorizontal="5dp"
                                android:text="@string/like"

                                android:textSize="8dp" />

                            <Button
                                android:id="@+id/dislikeBtn"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@null"
                                android:drawableStart="@drawable/ic_arrow_down"
                                android:paddingHorizontal="5dp"

                                android:text="Blame"
                                android:textSize="8dp"

                                />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/infoLike"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/pLikesTv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="2dp"

                                android:text="@string/_11_likes"
                                android:textColor="@color/colorBlack"
                                android:textSize="8sp" />


                            <TextView
                                android:id="@+id/pDislikesTv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="2dp"
                                android:text="23 Blames"
                                android:textColor="@color/colorBlack"
                                android:textSize="8sp" />

                        </LinearLayout>


                        <Button
                            android:id="@+id/forgiveBtn"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:drawableStart="@drawable/ic_baseline_autorenew"
                            android:paddingHorizontal="5dp"


                            android:text="Publish"
                            android:textSize="8dp"

                            />

                        <Button
                            android:id="@+id/shareBtn"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:drawableStart="@drawable/ic_twotone_share_24"
                            android:paddingHorizontal="5dp"
                            android:text="@string/share"
                            android:textSize="8dp" />


                    </LinearLayout>


                </LinearLayout>



            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/pCommentsTv"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Comment" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>




    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/commentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true">


        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/cAvatarIv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_person_24" />


        <EditText

            android:id="@+id/commentEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:layout_toStartOf="@+id/sendBtn"
            android:layout_toEndOf="@+id/cAvatarIv"
            android:padding="5dp"
            android:background="@drawable/edittext"
            android:hint="  Enter a comment..."
            android:inputType="textCapSentences|textMultiLine" />

        <ImageButton
            android:id="@+id/sendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:src="@drawable/arrowup" />


    </RelativeLayout>




</RelativeLayout>